<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/TitleBar"
        android:background="@drawable/shapetextview" >

        <ImageView
            android:id="@+id/img1"
            style="@style/TitleBarLogo"
            android:layout_gravity="center"
            android:layout_marginBottom="4dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:contentDescription="@null"
            android:paddingBottom="2dip"
            android:paddingLeft="5dip"
            android:paddingRight="7dip"
            android:src="@drawable/jobs_medium_2" />

        <ImageView
            android:id="@+id/sep"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="7dip"
            android:background="@drawable/separator"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tv1"
            style="@style/TitleBarText"
            android:paddingLeft="8dip"
            android:text="@string/app_name"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickVoltar"
            android:src="@drawable/voltar_jobs" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llRodape"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:paddingTop="0dp" >


            
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scrollbars="none" >


                <LinearLayout
                    android:id="@+id/LinearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dip" >

					<!-- Text Label -->

                    <TextView
                        style="@style/HomeText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dip"
                        android:text="@string/ac_preferencia_lbl_configuracao" />

                    <!-- EditText Nome -->

                    <EditText
                        android:id="@+id/txtNomePreferencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ac_preferencia_nome" >

                        <requestFocus />
                    </EditText>

                    <!-- EditText E-mail -->

                    <EditText
                        android:id="@+id/txtEmailPreferencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ac_preferencia_email"
                        android:inputType="textEmailAddress" />

                    <!-- EditText CPF -->

                    <EditText
                        android:id="@+id/txtCPFPreferencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="14"
                        android:hint="@string/ac_preferencia_cpf" />

                    <!-- EditText CPF -->

                    <EditText
                        android:id="@+id/txtSenhaPreferencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:hint="@string/ac_preferencia_senha" />
                    
                    <TextView
                            style="@style/HomeTextAnexar"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dip"
                            android:text="@string/ac_preferencia_senha_obs"/>
                    
                    <!--  Combo Estado  -->
                    
                    <Spinner
                            android:id="@+id/spnEstado"
                            android:layout_width="fill_parent"
                            android:layout_height="50dip"
                            android:prompt="@string/ac_preferencia_estado" />
                    
                    <LinearLayout
                        android:id="@+id/LinearPreCadastro"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shapeborder"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="10dip" >

                        <TextView
                            style="@style/HomeText"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dip"
                            android:text="@string/ac_preferencia_atuacao"/>

                        <!-- Combo Área de Atuação -->

                        <Spinner
                            android:id="@+id/spnAtuacao"
                            android:layout_width="fill_parent"
                            android:layout_height="50dip"
                            android:prompt="@string/ac_preferencia_atuacao" />

                        <TextView
                            style="@style/HomeText"
                            android:id="@+id/txtTempoExperiencia"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dip"
                            android:text="@string/ac_preferencia_experiencia"/>

                             <SeekBar
                                android:id="@+id/barTempoAnos"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.75" 
                                android:max="30"
                                android:progress="0"/>

                           <TextView
                            style="@style/HomeText"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dip"
                            android:text="Formaçao"/>

                        <!-- Combo Formação -->

                        <Spinner
                            android:id="@+id/spnFormacao"
                            android:layout_width="fill_parent"
                            android:layout_height="50dip"
                            android:prompt="@string/ac_preferencia_formacao" />
                        
                         <TextView
                            style="@style/HomeText"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dip"
                            android:text="Faixa Salarial"/>

                        <!-- Combo Faixa Salarial -->

                        <Spinner
                            android:id="@+id/spnFaixaSalarial"
                            android:layout_width="fill_parent"
                            android:layout_height="50dip"
                            android:prompt="@string/ac_preferencia_salarial" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/ivConfirma"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@null"
                            android:onClick="onClickConfirmar"
                            android:src="@drawable/button_ok" />

                        <ImageView
                            android:id="@+id/ivExcluir"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@null"
                            android:onClick="onClickExcluir"
                            android:src="@drawable/button_cancel" />

                        <ImageView
                            android:id="@+id/ivCurriculo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@null"
                            android:onClick="onClickCurriculo"
                            android:src="@drawable/email_jobs_config" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tvConfirma"
                            style="@style/HomeText"
                            android:layout_width="0dp"
                            android:layout_marginTop="0dip"
                            android:layout_weight="1"
                            android:text="@string/ac_preferencia_btn_ok" />

                        <TextView
                            android:id="@+id/tvExcluir"
                            style="@style/HomeText"
                            android:layout_width="0dp"
                            android:layout_marginTop="0dip"
                            android:layout_weight="1"
                            android:text="@string/ac_preferencia_btn_cancelar" />

                        <TextView
                            android:id="@+id/tvConfiguracaoEmail"
                            style="@style/HomeText"
                            android:layout_width="0dp"
                            android:layout_marginTop="0dip"
                            android:layout_weight="1"
                            android:text="@string/ac_preferencia_btn_curriculo" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llRodape"
        style="@style/TitleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/shapetextview"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvRodape"
            style="@style/TitleBarText"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:background="@drawable/shapetextview"
            android:gravity="center"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>